video z-index fix & main page redirect

--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,7 @@ video {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -100;
+    z-index: 2;
     transform: translateX(-50%) translateY(-50%);
 	background: url('../img/bg1.png') no-repeat;
   background-size: cover;
